--- a/template/studio/package.json
+++ b/template/studio/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@sanity/base": "^2.6.2",
     "@sanity/block-content-to-react": "^2.0.7",
+    "@sanity/cli": "^2.7.2",
     "@sanity/color-input": "^2.2.6",
     "@sanity/components": "^2.2.6",
     "@sanity/core": "^2.6.2",
