--- a/template/package.json
+++ b/template/package.json
@@ -14,12 +14,12 @@
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^2.1.4",
     "@sanity/image-url": "^0.140.19",
-    "@sanity/ui": "^0.33.9",
-    "lerna": "^4.0.0",
-    "next": "^10.0.4",
+    "@sanity/ui": "^0.37.12",
+    "concurrently": "^7.3.0",
+    "next": "^12.2.5",
     "next-sanity": "^0.1.8",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
     "styled-components": "^5.2.1"
   },
