--- a/template/studio/package.json
+++ b/template/studio/package.json
@@ -15,10 +15,8 @@
   ],
   "dependencies": {
     "@sanity/base": "^2.30.4",
-    "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/cli": "^2.30.3",
     "@sanity/color-input": "^2.30.4",
-    "@sanity/components": "^2.14.0",
     "@sanity/core": "^2.30.3",
     "@sanity/default-layout": "^2.30.4",
     "@sanity/default-login": "^2.30.4",
@@ -31,6 +29,7 @@
     "react-dom": "^16.2",
     "react-icons": "^4.2.0",
     "sanity-mobile-preview": "^1.0.7",
-    "sanity-plugin-asset-source-unsplash": "^0.1.3"
+    "sanity-plugin-asset-source-unsplash": "^0.1.3",
+    "styled-components": "^5.2.0"
   }
 }
